--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "gray-matter": "^4.0.3",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
-    "remark-gfm": "^4.0.0",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.30.0",
     "rehype-highlight": "^7.0.0",
     "rehype-stringify": "^10.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "remark-rehype": "^11.1.0"
   },
   "devDependencies": {
@@ -25,5 +27,8 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "typescript": "^5.3.0"
+  },
+  "overrides": {
+    "d3-color": "^3.1.0"
   }
 }
