--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-simple-maps": "^3.0.6",
     "typescript": "^5.3.0"
   },
   "overrides": {
